--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4033,6 +4033,7 @@ ul {
   position: relative;
   cursor: pointer;
   color: #2D3748 !important;
+  text-decoration: none;
 }
 
 .ndpv .pv-single-tabs .pv-tab-item .pv-single-tab-done {
