logo and overfolo fixed

--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -124,6 +124,7 @@
 
 .wp-admin.ndpv {
     background-color: #f7f8fa !important;
+    overflow: auto;
 
     .pv-left-sidebar,
     .pv-top-menu-content {
