accept decline paid edit mode off

--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -346,6 +346,8 @@ input:-webkit-autofill:active {
     .pv-intg-list {
         grid-template-columns: 1fr;
     }
+}
 
-    
+.ndpv .pv-horizontal-tab li {
+    margin: 0;
 }
