--- a/src/js/inv-tmpl/scss/all.scoped.scss
+++ b/src/js/inv-tmpl/scss/all.scoped.scss
@@ -119,7 +119,7 @@
     line-height: 15px;
     color: #000000;
     margin-bottom: 9px;
-    margin-top: 18px;
+    //margin-top: 18px;
   }
   .pv-inv-to h6 {
     font-family: var(--pv-inv-font-family-2);
