--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1971,11 +1971,11 @@ html {
   color: #1a202c;
   font-size: 14px;
   padding: 12px;
-  border: 1px solid rgba(221, 221, 221, 0.6588235294);
+  border: 1px solid rgba(221, 221, 221, 0.6588235294) !important;
   outline: none;
   line-height: 1;
-  padding-left: 40px;
-  border-radius: 8px;
+  padding-left: 40px !important;
+  border-radius: 8px !important;
   background: transparent;
   width: 330px;
 }
