tab border added

--- a/src/scss/partial/_list-single.scss
+++ b/src/scss/partial/_list-single.scss
@@ -410,6 +410,7 @@
   font-weight: 500;
   border: 1px solid #dddddda8;
   margin-right: 5px;
+  text-transform: capitalize;
 }
 
 @media screen and (max-width: 420px) {
