--- a/src/scss/welcome.scss
+++ b/src/scss/welcome.scss
@@ -1,6 +1,6 @@
 body.toplevel_page_ndpv-welcome {
 	margin-top: -32px;
-	background: #fff;
+	background: #F7F8FA;
 	// font-family: "Nunito", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
