--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -121,6 +121,10 @@
     position: relative;
 }
 
+.ndpv .pv-right-content .pv-right-content-data.pv-board-area {
+    padding-bottom: 20px;
+}
+
 .wp-admin.ndpv {
     background-color: #f7f8fa !important;
     overflow-y: auto;
@@ -137,10 +141,14 @@
     .pv-right-content {
         height: calc(100vh - 30px);
     }
+
+    .pv-board-content {
+        height: calc(100vh - 350px);
+    }
 }
 
 .ndpv {
-    .pv-board-content {
+    .pv-board-area {
         max-width: none !important;
     }
 
