fix style issues

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1753,7 +1753,7 @@ html {
 .ndpv .pv-breadcrumb {
   margin-bottom: 6px;
   margin-left: -5px;
-  display: inline-block;
+  display: none;
 }
 
 .ndpv .pv-breadcrumb ul {
