--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3185,7 +3185,7 @@ table thead:first-child tr:first-child th {
 }
 
 .pv-modal-content .pv-dropdown-content {
-  height: 351px;
+  // height: 351px;
 }
 
 /*-------------------------------------------------------------- 
